--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic todo api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "Mehmet Ayan",
   "license": "ISC",
@@ -13,5 +14,11 @@
     "express": "^4.16.3",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.12"
+  },
+  "devDependencies": {
+    "expect": "^22.4.3",
+    "mocha": "^5.0.5",
+    "nodemon": "^1.17.3",
+    "supertest": "^3.0.0"
   }
 }
